<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright (c) 2013 Lucky Paws, Inc
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-->

<resources>
    <string name="app_name">Lucky Paws Boarding and Daycare</string>
	<string name="web_cam">View Web Cam</string>
	<string name="reservations">Make Reservations</string>
	<string name="preferences">Preferences</string>
	<string name="nothing_here">Bob? Bob ain\'t here, man!</string>
	<string name="not_set">Press Edit Info To Set</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="error">Oops!</string>
	<string name="ok">OK</string>
	<string name="none"></string>

	<string name="save_button">Save</string>
	<string name="cancel_button">Cancel</string>
	<string name="edit_info_button">Edit Info</string>
	<string name="close_button">Close</string>
	<string name="delete_pet_button">Delete Pet</string>
	<string name="submit_button">Submit</string>

	<string name="personal_info_heading">Personal Info</string>
	<string name="full_name_label">Pet Owner</string>
	<string name="first_name_label">First Name</string>
	<string name="last_name_label">Last Name</string>
	<string name="address_street_label">Street</string>
	<string name="address_city_label">City</string>
	<string name="address_state_label">State</string>
	<string name="address_zip_label">ZIP</string>
	<string name="phone1_label">Home</string>
	<string name="phone2_label">Mobile</string>
	<string name="phone3_label">Work</string>
	<string name="phone_generic_label">Phone</string>
	<string name="email_label">E-mail</string>

	<string name="error_info_save">There was an error saving your info. Please try again.</string>
	<string name="error_pet_delete">There was an error deleting this pet. Please try again.</string>
	<string name="pet_delete_successful">This pet was successfully deleted.</string>
	<string name="update_successful">Your information saved successfully</string>

	<string name="info_about_header">About Lucky Paws</string>
	<string name="lucky_paws_inc">Lucky Paws, Inc — Clayton, NC</string>

	<string name="contact_header">Lucky Paws Contact Information</string>
	<string name="call_lp">Call Lucky Paws</string>
	<string name="email_lp">E-mail Lucky Paws</string>
	<string name="drive_to_lp">Driving Directions</string>
	<string name="address_label">Address</string>
	<string name="phone_label">Phone</string>
	<string name="hours_label">Hours</string>
	<string name="lucky_paws_address">2900 HWY 70 E\nClayton, NC 27576</string>
	<string name="lucky_paws_phone">(919) 550-8400</string>
	<string name="lucky_paws_email">staff@myluckypaws.com</string>
	<string name="lucky_paws_hours">Mon-Fri 7-11am &amp; 3-7pm\nSat, Sun, Holidays 10-12noon &amp; 4-5pm</string>

	<string name="lucky_paws_location_uri">35.6745060,-78.5191799</string>

	<string name="my_pet_header">My Pet\'s Information</string>
	<string name="name_label">Name</string>
	<string name="dog_cat_label">Dog/Cat</string>
	<string name="breed_label">Breed</string>
	<string name="neutered_spayed_label">Neutered/Spayed</string>
	<string name="neutered_label">Neutered</string>
	<string name="spayed_label">Spayed</string>
	<string name="birthdate_label">Birthdate</string>
	<string name="size_label">Size</string>
	<string name="sex_label">Sex</string>
	<string name="male">Male</string>
	<string name="female">Female</string>
	<string name="dog">Dog</string>
	<string name="cat">Cat</string>

	<string name="need_name">How can your pet come when you call if you don\'t give it a name?</string>

	<string name="less_than_ten_pounds">&lt;10 pounds</string>
	<string name="ten_to_twenty_five_pounds">10-25 pounds</string>
	<string name="twenty_five_to_fifty_pounds">25-50 pounds</string>
	<string name="fifty_to_seventy_five_pounds">50-75 pounds</string>
	<string name="seventy_five_to_one_hundred_pounds">75-100 pounds</string>
	<string name="more_than_one_hundred_pounds">100+ pounds</string>

	<string name="spinner_select_prompt">Select...</string>

	<string-array name="dog_cat_spinner_entries">
		<item>Select...</item>
		<item>@string/dog</item>
		<item>@string/cat</item>
	</string-array>

	<string-array name="yes_no_spinner_entries">
		<item>Select...</item>
		<item>@string/yes</item>
		<item>@string/no</item>
	</string-array>

	<string-array name="size_spinner_entries">
		<item>Select...</item>
		<item>@string/less_than_ten_pounds</item>
		<item>@string/ten_to_twenty_five_pounds</item>
		<item>@string/twenty_five_to_fifty_pounds</item>
		<item>@string/fifty_to_seventy_five_pounds</item>
		<item>@string/seventy_five_to_one_hundred_pounds</item>
		<item>@string/more_than_one_hundred_pounds</item>
	</string-array>

	<string-array name="sex_spinner_entries">
		<item>Select...</item>
		<item>@string/male</item>
		<item>@string/female</item>
	</string-array>

	<string name="add_pet_button">Add A Pet</string>
	<string name="confirm_delete_message">Are you sure you want to delete information for this pet?\n\nThis operation cannot be undone.</string>

	<string name="drop_off_label">Drop-off:</string>
	<string name="pick_up_label">Pick-up:</string>
	<string name="date_hint">Date</string>
	<string name="time_hint">Select Time</string>
	<string name="drop_off_time">Drop-off Time</string>
	<string name="pick_up_time">Pick-up Time</string>
	<string name="how_many_dogs">How Many Dogs?</string>
	<string name="how_many_cats">How Many Cats?</string>
	<string name="boarding_price_label">Boarding:</string>
	<string name="half_day_price_label">Half Day:</string>
	<string name="bath_price_label">*Exit Bath:</string>
	<string name="exit_bath_disclosure">*Exit baths are not included in the total price.</string>
	<string name="order_exit_bath">Would you like to order an exit bath?</string>
	<string name="total_price_label">Total Price:</string>
	<string name="comments_label">Comments:</string>
	<string name="choose_pet">Choose a pet</string>
	<string name="custom_pet_name">Enter new pet name</string>
	<string name="dog_num">Dog #</string>
	<string name="cat_num">Cat #</string>
    <string name="reservation_error">There was an error making your reservation. Please check you info and connectivity and try again.</string>
    <string name="reservation_success_header">Reservation Successful</string>
    <string name="reservation_success">We\'ll see you soon!\n\nIf you do not receive your confirmation email within 24 hours please check your spam folder.</string>
    <string name="put_reservation_in_calendar">Would you like to make reminder appointments in your calendar?</string>

    <string name="closed_that_day">Drop off and pick up are not available that day.</string>
    <string name="drop_off_string">drop off</string>
    <string name="pick_up_string">pick up</string>
    <string name="please_choose_another_date">Please choose another date.</string>

    <string name="reservation_successful_check_text">If you do not receive your confirmation email within 24 business hours please check your spam folder.</string>

	<string name="am_weekday">7-11 a.m.</string>
	<string name="am_weekday_form_data">AM.7-11 AM</string>
	<string name="am_weekend">10 a.m. - 12 noon</string>
	<string name="am_weekend_form_data">AM.10-12 AM</string>
	<string name="pm_weekday">3-7 p.m.</string>
	<string name="pm_weekday_form_data">PM.3-7 PM</string>
	<string name="pm_weekend">4-5 p.m.</string>
	<string name="pm_weekend_form_data">PM.4-5 PM</string>

	<string-array name="time_frames">
		<item>@string/time_hint</item>
		<item>@string/am_weekday</item>
		<item>@string/pm_weekday</item>
	</string-array>

	<string-array name="time_frames_weekend">
		<item>@string/time_hint</item>
		<item>@string/am_weekend</item>
		<item>@string/pm_weekend</item>
	</string-array>

	<string-array name="one_to_four">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
	</string-array>
</resources>
