<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2013. Lucky Paws, Inc
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>

	<include layout="@layout/standard_header_no_action"/>

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:fillViewport="true"
		>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical"
			>

			<TextView
				style="@style/form_header"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/reservations"
				/>

			<View
				style="@style/reservations_underline_full_width"
				/>

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<TextView
					style="@style/form_label"
					android:text="@string/drop_off_label"
					/>

				<View
					style="@style/form_label_underline"
					/>

			</LinearLayout>

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				>

				<TextView
					android:id="@+id/drop_off_date_picker"
					style="@style/form_edit_text"
					android:layout_weight="50"
					android:hint="@string/date_hint"
					android:textSize="@dimen/text_18"
					android:layout_marginRight="@dimen/scalable_10_pix"
					android:singleLine="true"
					/>

				<Spinner
					android:id="@+id/drop_off_time_picker"
					style="@style/spinner"
					android:layout_weight="50"
					android:entries="@array/time_frames"
					android:prompt="@string/drop_off_time"
					android:layout_marginLeft="@dimen/scalable_10_pix"
					/>

			</LinearLayout>

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<TextView
					style="@style/form_label"
					android:text="@string/pick_up_label"
					/>

				<View
					style="@style/form_label_underline"
					/>

			</LinearLayout>

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				>

				<TextView
					android:id="@+id/pick_up_date_picker"
					style="@style/form_edit_text"
					android:layout_weight="50"
					android:hint="@string/date_hint"
					android:textSize="@dimen/text_18"
					android:layout_marginRight="@dimen/scalable_10_pix"
					android:singleLine="true"
					/>

				<Spinner
					android:id="@+id/pick_up_time_picker"
					style="@style/spinner"
					android:layout_weight="50"
					android:entries="@array/time_frames"
					android:prompt="@string/pick_up_time"
					android:layout_marginLeft="@dimen/scalable_10_pix"
					/>

			</LinearLayout>

			<View
				style="@style/reservations_underline_full_width"
				/>

			<LinearLayout
				android:id="@+id/first_name_labels"
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<TextView
					style="@style/form_label"
					android:text="@string/first_name_label"
					/>

				<View
					style="@style/form_label_underline"
					/>

			</LinearLayout>

			<EditText
				android:id="@+id/first_name_input"
				style="@style/form_edit_text"
				android:hint="@string/first_name_label"
				android:inputType="textCapWords"
				android:maxLines="1"
				/>

			<LinearLayout
				android:id="@+id/last_name_labels"
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<TextView
					style="@style/form_label"
					android:text="@string/last_name_label"
					/>

				<View
					style="@style/form_label_underline"
					/>

			</LinearLayout>

			<EditText
				android:id="@+id/last_name_input"
				style="@style/form_edit_text"
				android:hint="@string/last_name_label"
				android:inputType="textCapWords"
				android:maxLines="1"
				/>

			<LinearLayout
				android:id="@+id/phone_labels"
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<TextView
					style="@style/form_label"
					android:text="@string/phone_generic_label"
					/>

				<View
					style="@style/form_label_underline"
					/>

			</LinearLayout>

			<EditText
				android:id="@+id/phone_input"
				style="@style/form_edit_text"
				android:hint="@string/phone_generic_label"
				android:inputType="phone"
				android:maxLines="1"
				android:phoneNumber="true"
				/>

			<LinearLayout
				android:id="@+id/address_street_labels"
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<TextView
					style="@style/form_label"
					android:text="@string/address_street_label"
					/>

				<View
					style="@style/form_label_underline"
					/>

			</LinearLayout>

			<EditText
				android:id="@+id/address_street_input"
				style="@style/form_edit_text"
				android:hint="@string/address_street_label"
				android:inputType="textCapWords"
				android:maxLines="1"
				/>

			<LinearLayout
				android:id="@+id/address_second_line"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				>

				<LinearLayout
					android:id="@+id/address_city_container"
					android:orientation="vertical"
					android:layout_width="@dimen/no_scale_0_pix"
					android:layout_height="wrap_content"
					android:layout_weight="30"
					>

					<LinearLayout
						android:id="@+id/address_city_labels"
						android:orientation="vertical"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<TextView
							style="@style/form_label"
							android:text="@string/address_city_label"
							/>

						<View
							style="@style/form_label_underline"
							/>

					</LinearLayout>

					<EditText
						android:id="@+id/address_city_input"
						style="@style/form_edit_text"
						android:hint="@string/address_city_label"
						android:inputType="textCapWords"
						android:layout_marginRight="@dimen/scalable_10_pix"
						android:maxLines="1"
						/>

				</LinearLayout>

				<LinearLayout
					android:id="@+id/address_state_container"
					android:orientation="vertical"
					android:layout_width="@dimen/no_scale_0_pix"
					android:layout_height="wrap_content"
					android:layout_weight="20"
					>

					<LinearLayout
						android:id="@+id/address_state_labels"
						android:orientation="vertical"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<TextView
							style="@style/form_label"
							android:text="@string/address_state_label"
							android:layout_marginLeft="@dimen/scalable_15_pix"
							/>

						<View
							style="@style/form_label_underline"
							android:layout_marginLeft="@dimen/scalable_15_pix"
							/>

					</LinearLayout>

					<EditText
						android:id="@+id/address_state_input"
						style="@style/form_edit_text"
						android:hint="@string/address_state_label"
						android:inputType="textCapWords"
						android:layout_marginRight="@dimen/scalable_10_pix"
						android:layout_marginLeft="@dimen/scalable_10_pix"
						android:maxLines="1"
						/>

				</LinearLayout>

				<LinearLayout
					android:id="@+id/address_zip_container"
					android:orientation="vertical"
					android:layout_width="@dimen/no_scale_0_pix"
					android:layout_height="wrap_content"
					android:layout_weight="20"
					>

					<LinearLayout
						android:id="@+id/address_zip_labels"
						android:orientation="vertical"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<TextView
							style="@style/form_label"
							android:text="@string/address_zip_label"
							android:layout_marginLeft="@dimen/scalable_15_pix"
							/>

						<View
							style="@style/form_label_underline"
							android:layout_marginLeft="@dimen/scalable_15_pix"
							/>

					</LinearLayout>

					<EditText
						android:id="@+id/address_zip_input"
						style="@style/form_edit_text"
						android:hint="@string/address_zip_label"
						android:inputType="number"
						android:layout_marginLeft="@dimen/scalable_10_pix"
						android:maxLines="1"
						android:maxLength="5"
						/>

				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/email_labels"
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<TextView
					style="@style/form_label"
					android:text="@string/email_label"
					/>

				<View
					style="@style/form_label_underline"
					/>

			</LinearLayout>

			<EditText
				android:id="@+id/email_input"
				style="@style/form_edit_text"
				android:hint="@string/email_label"
				android:inputType="textEmailAddress"
				android:maxLines="1"
				/>

			<View
				style="@style/reservations_underline_full_width"
				/>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				>

				<LinearLayout
					android:id="@+id/num_dogs_labels"
					android:orientation="vertical"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="50"
					android:layout_marginRight="@dimen/scalable_30_pix"
					>

					<TextView
						style="@style/form_label"
						android:text="@string/how_many_dogs"
						/>

					<View
						style="@style/form_label_underline"
						/>

					<Spinner
						android:id="@+id/num_dogs_picker"
						style="@style/spinner"
						android:entries="@array/one_to_four"
						android:prompt="@string/how_many_dogs"
						/>

				</LinearLayout>

				<LinearLayout
					android:id="@+id/num_cats_labels"
					android:orientation="vertical"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="50"
					android:layout_marginRight="@dimen/scalable_10_pix"
					>

					<TextView
						style="@style/form_label"
						android:text="@string/how_many_cats"
						/>

					<View
						style="@style/form_label_underline"
						/>

					<Spinner
						android:id="@+id/num_cats_picker"
						style="@style/spinner"
						android:entries="@array/one_to_four"
						android:prompt="@string/how_many_cats"
						/>

				</LinearLayout>

			</LinearLayout>

			<View
				style="@style/reservations_underline_full_width"
				/>

			<LinearLayout
				android:id="@+id/dogs_root_layout"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/cats_root_layout"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				>

			</LinearLayout>

			<View
				style="@style/reservations_underline_full_width"
				/>

			<LinearLayout
				android:id="@+id/price_display_layout"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="right"
				android:layout_gravity="right"
				android:orientation="vertical"
				>

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					>

					<TextView
						android:id="@+id/boarding_price_label"
						style="@style/form_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/boarding_price_label"
						/>

					<TextView
						android:id="@+id/boarding_price_value"
						style="@style/form_label"
						android:layout_width="@dimen/scalable_75_pix"
						android:layout_height="wrap_content"
						android:layout_marginRight="@dimen/scalable_30_pix"
						android:gravity="right"
						android:text="@string/none"
						/>

				</LinearLayout>

				<LinearLayout
					android:id="@+id/bath_layout_root"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					>

					<TextView
						android:id="@+id/bath_price_label"
						style="@style/form_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/bath_price_label"
						/>

					<TextView
						android:id="@+id/bath_price_value"
						style="@style/form_label"
						android:layout_width="@dimen/scalable_75_pix"
						android:layout_height="wrap_content"
						android:layout_marginRight="@dimen/scalable_30_pix"
						android:gravity="right"
						android:text="@string/none"
						/>

				</LinearLayout>

				<View
					style="@style/reservations_underline_full_width"
					/>

				<LinearLayout
					android:id="@+id/total_price_layout_root"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					>

					<TextView
						android:id="@+id/total_price_label"
						style="@style/form_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/total_price_label"
						/>

					<TextView
						android:id="@+id/total_price_value"
						style="@style/form_label"
						android:layout_width="@dimen/scalable_75_pix"
						android:layout_height="wrap_content"
						android:layout_marginRight="@dimen/scalable_30_pix"
						android:gravity="right"
						android:text="@string/none"
						/>

				</LinearLayout>

			</LinearLayout>

			<TextView
				style="@style/form_label"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="right"
				android:layout_marginRight="@dimen/scalable_30_pix"
				android:gravity="right"
				android:textSize="@dimen/text_10"
				android:text="@string/exit_bath_disclosure"
				/>

			<View
				style="@style/reservations_underline_full_width"
				/>

			<LinearLayout
				android:id="@+id/comment_labels"
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<TextView
					style="@style/form_label"
					android:text="@string/comments_label"
					/>

				<View
					style="@style/form_label_underline"
					/>

			</LinearLayout>

			<EditText
				android:id="@+id/comments_input"
				style="@style/form_edit_text"
				android:minLines="5"
				android:maxLines="5"
				/>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="@dimen/scalable_10_pix"
				android:layout_marginBottom="@dimen/scalable_10_pix"
				>

				<Button
					android:id="@+id/submit_button"
					style="@style/blue_button"
					android:layout_weight="50"
					android:text="@string/submit_button"
					/>

				<Button
					android:id="@+id/cancel_button"
					style="@style/blue_button"
					android:layout_weight="50"
					android:text="@string/cancel_button"
					/>

			</LinearLayout>

		</LinearLayout>

	</ScrollView>

</LinearLayout>