<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2013. Lucky Paws, Inc
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical"
				style="@style/layout_root"
	>

	<include layout="@layout/standard_header_no_action"
			 android:id="@+id/header_bar"
			 android:layout_alignParentTop="true"
		/>

	<LinearLayout
		android:id="@+id/button_container"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingTop="@dimen/scalable_10_pix"
		android:paddingBottom="@dimen/scalable_10_pix"
		android:paddingRight="@dimen/scalable_5_pix"
		android:paddingLeft="@dimen/scalable_5_pix"
		android:orientation="horizontal"
		android:layout_alignParentBottom="true"
		>

		<Button
			android:id="@+id/edit_button"
			style="@style/blue_button"
			android:layout_width="wrap_content"
			android:text="@string/edit_info_button"
			android:layout_marginLeft="@dimen/scalable_45_pix"
			android:layout_marginRight="@dimen/scalable_45_pix"
			/>

	</LinearLayout>

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_below="@id/header_bar"
		android:layout_above="@id/button_container"
		>

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			>

			<TextView
				android:id="@+id/header_label"
				style="@style/form_header"
				android:text="@string/personal_info_heading"
				/>

			<LinearLayout
				android:id="@+id/first_name_labels"
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<TextView
					style="@style/form_label"
					android:text="@string/full_name_label"
					/>

				<View
					style="@style/form_label_underline"
					/>

			</LinearLayout>

			<TextView
				android:id="@+id/first_name_display"
				style="@style/form_value_display"
				android:text="@string/first_name_label"
				/>

			<LinearLayout
				android:id="@+id/phone_double_row"
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				>

				<LinearLayout
					android:id="@+id/phone_one_container"
					android:orientation="vertical"
					android:layout_width="@dimen/no_scale_0_pix"
					android:layout_height="wrap_content"
					android:layout_weight="50"
					>

					<LinearLayout
						android:id="@+id/phone_one_labels"
						android:orientation="vertical"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<TextView
							android:id="@+id/phone_one_label"
							style="@style/form_label"
							android:text="@string/phone1_label"
							/>

						<View
							style="@style/form_label_underline"
							/>

					</LinearLayout>

					<TextView
						android:id="@+id/phone_one_display"
						style="@style/form_value_display"
						android:text="@string/phone1_label"
						android:layout_marginRight="@dimen/scalable_10_pix"
						/>

				</LinearLayout>

				<LinearLayout
					android:id="@+id/phone_two_container"
					android:orientation="vertical"
					android:layout_width="@dimen/no_scale_0_pix"
					android:layout_height="wrap_content"
					android:layout_weight="50"
					>

					<LinearLayout
						android:id="@+id/phone_two_labels"
						android:orientation="vertical"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<TextView
							android:id="@+id/phone_two_label"
							style="@style/form_label"
							android:text="@string/phone2_label"
							android:layout_marginLeft="@dimen/scalable_15_pix"
							/>

						<View
							style="@style/form_label_underline"
							android:layout_marginLeft="@dimen/scalable_15_pix"
							/>

					</LinearLayout>

					<TextView
						android:id="@+id/phone_two_display"
						style="@style/form_value_display"
						android:text="@string/phone2_label"
						android:layout_marginLeft="@dimen/scalable_10_pix"
						/>

				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/phone_three_labels"
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<TextView
					style="@style/form_label"
					android:text="@string/phone3_label"
					/>

				<View
					style="@style/form_label_underline"
					/>

			</LinearLayout>

			<TextView
				android:id="@+id/phone_three_display"
				style="@style/form_value_display"
				android:text="@string/phone3_label"
				/>

			<LinearLayout
				android:id="@+id/address_street_labels"
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<TextView
					style="@style/form_label"
					android:text="@string/address_street_label"
					/>

				<View
					style="@style/form_label_underline"
					/>

			</LinearLayout>

			<TextView
				android:id="@+id/address_street_display"
				style="@style/form_value_display"
				android:text="@string/address_street_label"
				/>

			<LinearLayout
				android:id="@+id/address_second_line"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				>

				<LinearLayout
					android:id="@+id/address_city_container"
					android:orientation="vertical"
					android:layout_width="@dimen/no_scale_0_pix"
					android:layout_height="wrap_content"
					android:layout_weight="30"
					>

					<LinearLayout
						android:id="@+id/address_city_labels"
						android:orientation="vertical"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<TextView
							android:id="@+id/address_city_label"
							style="@style/form_label"
							android:text="@string/address_city_label"
							/>

						<View
							style="@style/form_label_underline"
							/>

					</LinearLayout>

					<TextView
						android:id="@+id/address_city_display"
						style="@style/form_value_display"
						android:text="@string/address_city_label"
						android:layout_marginRight="@dimen/scalable_10_pix"
						/>

				</LinearLayout>

				<LinearLayout
					android:id="@+id/address_state_container"
					android:orientation="vertical"
					android:layout_width="@dimen/no_scale_0_pix"
					android:layout_height="wrap_content"
					android:layout_weight="20"
					>

					<LinearLayout
						android:id="@+id/address_state_labels"
						android:orientation="vertical"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<TextView
							android:id="@+id/address_state_label"
							style="@style/form_label"
							android:text="@string/address_state_label"
							android:layout_marginLeft="@dimen/scalable_15_pix"
							/>

						<View
							style="@style/form_label_underline"
							android:layout_marginLeft="@dimen/scalable_15_pix"
							/>

					</LinearLayout>

					<TextView
						android:id="@+id/address_state_display"
						style="@style/form_value_display"
						android:text="@string/address_state_label"
						android:layout_marginRight="@dimen/scalable_10_pix"
						android:layout_marginLeft="@dimen/scalable_10_pix"
						/>

				</LinearLayout>

				<LinearLayout
					android:id="@+id/address_zip_container"
					android:orientation="vertical"
					android:layout_width="@dimen/no_scale_0_pix"
					android:layout_height="wrap_content"
					android:layout_weight="20"
					>

					<LinearLayout
						android:id="@+id/address_zip_labels"
						android:orientation="vertical"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<TextView
							style="@style/form_label"
							android:text="@string/address_zip_label"
							android:layout_marginLeft="@dimen/scalable_15_pix"
							/>

						<View
							style="@style/form_label_underline"
							android:layout_marginLeft="@dimen/scalable_15_pix"
							/>

					</LinearLayout>

					<TextView
						android:id="@+id/address_zip_display"
						style="@style/form_value_display"
						android:text="@string/address_zip_label"
						android:layout_marginLeft="@dimen/scalable_10_pix"
						/>

				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/email_labels"
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<TextView
					style="@style/form_label"
					android:text="@string/email_label"
					/>

				<View
					style="@style/form_label_underline"
					/>

			</LinearLayout>

			<TextView
				android:id="@+id/email_display"
				style="@style/form_value_display"
				android:text="@string/email_label"
				/>

		</LinearLayout>

	</ScrollView>

</RelativeLayout>